--- a/Aplicacion_Carros_Electricos/Base.lproj/Main.storyboard
+++ b/Aplicacion_Carros_Electricos/Base.lproj/Main.storyboard
@@ -69,6 +69,21 @@
             </objects>
             <point key="canvasLocation" x="-2112" y="-881"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="7Wb-dg-1vy">
+            <objects>
+                <viewController id="7W9-qy-AdQ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wbV-mf-buL">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="1N4-i1-Gts"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sug-Fm-p8f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1083" y="-1368"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="opaqueSeparatorColor">
